k8s/ingress/api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress
  namespace: default
spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: api
          port: 80
